# explo

./: .prettierrc  :w  README.md  \  bun.lockb  next.config.mjs  package-lock.json  package.json  tsconfig.json
components/: FileOrFolderItem.tsx  Row.tsx  WordWhenSearching.tsx
lib/: atoms.ts  consts.ts  events.ts  schemas.ts  theme.ts  useUndoRedo.ts  utils.ts
pages/: _app.tsx  _document.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
styles/: globals.css
types/: types.ts
