[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["kul-sudo"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
tauri = { version = "1.5.4", features = [
  "shell-open",
  "window-set-fullscreen",
  "fs-exists",
  "path-all",
] }
tokio = { version = "1.35.1", features = ["full"] }
regex = "1.10.3"
walkdir = "2.4.0"
trash = "3.2.1"
globmatch = "0.3.0"
sysinfo = "0.29.10"
lazy_static = "1.4.0"
open = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
